Add routing, some clinic functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
+<h1>{{title}}</h1>
 <nav>
     <a routerLink="/clinics" routerLinkActive="active">Clinics</a>
     <a routerLink="/therapists" routerLinkActive="active">Therapists</a>
     <a routerLink="/patients" routerLinkActive="active">Patients</a>
 </nav>
-
+<router-outlet></router-outlet>
